--- a/apollo_tutorial/package.json
+++ b/apollo_tutorial/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.19.1",
+    "babel-cli": "^6.18.0",
     "body-parser-graphql": "^1.1.0",
     "compression": "^1.7.4",
     "express": "^4.17.1"
