--- a/basic_crud/package.json
+++ b/basic_crud/package.json
@@ -1,14 +1,15 @@
 {
   "name": "basic_crud",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "mongoose": "^5.11.10"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --exec babel-node app.js"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
