[Mod] DynamoDB 구성중

--- a/basic_crud/package.json
+++ b/basic_crud/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.825.0",
     "babel-cli": "^6.26.0",
     "graphql-yoga": "^1.18.3",
     "mongoose": "^5.11.10"
