--- a/basic_crud/package.json
+++ b/basic_crud/package.json
@@ -13,7 +13,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node app.js dynamo"
+    "start": "nodemon --exec babel-node app.js mongo"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
