[Mod] 코드 설계 깔끔하게 수정.

--- a/basic_crud/package.json
+++ b/basic_crud/package.json
@@ -14,7 +14,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node app.js"
+    "start": "nodemon --exec babel-node app.js dynamo"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
