--- a/migration/package.json
+++ b/migration/package.json
@@ -11,7 +11,8 @@
     "babel-cli": "^6.26.0",
     "dotenv": "^8.2.0",
     "dynamoose": "^2.6.0",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon migration.js"
